# manifest-wizard

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: api.md  changelog.md  conf.py  index.md  requirements.txt  usage.md
src/manifest_wizard/: crypto.py  models.py
src/manifest_wizard_well_it_wasnt_me/: __init__.py  cli.py  storage.py  ui.py
tests/: test_smoke.py
