[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manifest_wizard_well_it_wasnt_me"
version = "1.0.0"
description = "Generate forensic/pentest artifact manifests; zip, encrypt (OpenSSL), and sign (GPG) with a polished TUI."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Antonio", email = "dangeloantonio179@gmail.com" }]
keywords = ["forensics", "pentest", "artifacts", "manifest", "hash", "encryption", "gpg", "openssl"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Security",
  "Topic :: System :: Archiving"
]

dependencies = [
  "rich>=13.7.0"
]

[project.urls]
Homepage = "https://github.com/well-it-wasnt-me/manifest-wizard"
Issues = "https://github.com/well-it-wasnt-me/manifest-wizard/issues"

[project.scripts]
manifest-wizard = "manifest_wizard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
